--- a/smos-docs-site/content/changelogs/2020-09-25.markdown
+++ b/smos-docs-site/content/changelogs/2020-09-25.markdown
@@ -1,9 +1,6 @@
 ---
-title: Release 2020-09-25
-description: The changelog for the 2020-09-25 release
+day: 2020-09-25
 ---
-
-# <a name="2020-09-25">[2020-09-25 Release](#2020-09-25)
 
 - <a name="smos-0.1.0">[smos 0.1.0](#smos-0.1.0)
 - <a name="smos-query-0.1.0">[smos-query 0.1.0](#smos-query-0.1.0)
