--- a/smos-docs-site/content/changelogs/2020-12-16.markdown
+++ b/smos-docs-site/content/changelogs/2020-12-16.markdown
@@ -1,9 +1,6 @@
 ---
-title: Release 2020-12-16
-description: The changelog for the 2020-12-16 release
+day: 2020-12-16
 ---
-
-# <a name="2020-12-16">[2020-12-16 Release](#2020-12-16)
 
 - <a name="smos-0.1.2">[smos 0.1.2](#smos0-1.2)
 - <a name="smos-calendar-import-0.2.0">[smos-calendar-import 0.2.0](#smos-calendar-import0-2.0)
