--- a/smos-docs-site/content/changelogs/2021-02-01.markdown
+++ b/smos-docs-site/content/changelogs/2021-02-01.markdown
@@ -1,9 +1,6 @@
 ---
-title: Release 2021-02-01
-description: The changelog for the 2021-02-01 release
+day: 2021-02-01
 ---
-
-# <a name="2021-02-01">[2021-02-01 Release](#2021-02-01)
 
 - <a name="smos-0.1.3">[smos 0.1.3](#smos-0.1.3)
 - <a name="smos-query-0.1.2">[smos-query 0.1.2](#smos-query-0.1.2)
