--- a/smos-docs-site/content/changelogs/2020-09-25.markdown
+++ b/smos-docs-site/content/changelogs/2020-09-25.markdown
@@ -1,7 +1,3 @@
----
-day: 2020-09-25
----
-
 - <a name="smos-0.1.0">[smos 0.1.0](#smos-0.1.0)
 - <a name="smos-query-0.1.0">[smos-query 0.1.0](#smos-query-0.1.0)
 - <a name="smos-single-0.1.0">[smos-single 0.1.0](#smos-single-0.1.0)
@@ -14,7 +10,7 @@ day: 2020-09-25
 - <a name="smos-sync-client-0.1.0">[smos-sync-client 0.1.0](#smos-sync-client-0.1.0)
 - <a name="smos-web-server-0.1.0">[smos-web-server 0.1.0](#smos-web-server-0.1.0)
 
-## Added
+##### Added
 
 - smos: The first version of the Smos TUI
 - smos-query: The first version of the Smos Query tool
