--- a/smos-docs-site/content/changelogs/2020-12-16.markdown
+++ b/smos-docs-site/content/changelogs/2020-12-16.markdown
@@ -1,7 +1,3 @@
----
-day: 2020-12-16
----
-
 - <a name="smos-0.1.2">[smos 0.1.2](#smos0-1.2)
 - <a name="smos-calendar-import-0.2.0">[smos-calendar-import 0.2.0](#smos-calendar-import0-2.0)
 - <a name="smos-cursor-0.2.0">[smos-cursor 0.2.0](#smos-cursor0-2.0)
@@ -10,7 +6,7 @@ day: 2020-12-16
 - <a name="smos-shell-0.0.0">[smos-shell 0.0.0](#smos-shell0-0.0)
 - <a name="smos-web-server-0.1.1">[smos-web-server 0.1.1](#smos-web-server0-1.1)
 
-## Added
+##### Added
 
 - `smos`: 
   You can now use Word-based movements in headers and contents.
@@ -22,7 +18,7 @@ day: 2020-12-16
   It is now possible to hide timestamps.
   Timestamps of done entries are hidden by default.
 
-## Changed
+##### Changed
 
 - `smos-query`:
   It is now possible to run the work report without any context.
@@ -47,7 +43,7 @@ day: 2020-12-16
 - `smos-query`:
   The work report now requires you to configure a timewindow property if you make use of the time filter feature.
 
-## Removed
+##### Removed
 
 - `smos-query`:
   The 'smart' mode for the work command has been removed. It is now the default.
