--- a/smos-docs-site/content/changelogs/2021-02-01.markdown
+++ b/smos-docs-site/content/changelogs/2021-02-01.markdown
@@ -1,19 +1,15 @@
----
-day: 2021-02-01
----
-
 - <a name="smos-0.1.3">[smos 0.1.3](#smos-0.1.3)
 - <a name="smos-query-0.1.2">[smos-query 0.1.2](#smos-query-0.1.2)
 - <a name="smos-archive-0.2.0">[smos-archive 0.2.0](#smos-archive-0.2.0)
 
 
-## Added
+##### Added
 
 - `smos`: The `browserSelectFirst` and `browserSelectLast` actions, which are activated by `gg` and `G` respectively by default.
 - `smos`: The `convArchiveFile` function, activated by `<space>fa` by default. You can use it to archive a file while looking at the file.
 - Nixos module tests for home-manager configurations. The home manager module is now an official deliverable.
 
-## Changed
+##### Changed
 
 - `smos-archive`: The timestamp appended to the filename during archiving now includes the local time of day instead of only the day.
 - `smos`: The contents of an entry are now aligned with its state and header instead of with its list indicator.
