--- a/smos-docs-site/content/changelogs/2021-03-13.markdown
+++ b/smos-docs-site/content/changelogs/2021-03-13.markdown
@@ -1,7 +1,3 @@
----
-day: 2021-03-13
----
-
 - <a name="smos-0.1.4">[smos 0.1.4](#smos-0.1.4)
 - <a name="smos-cursor-0.2.1">[smos-cursor 0.2.1](#smos-cursor-0.2.1)
 - <a name="smos-cursor-gen-0.1.1">[smos-cursor-gen 0.1.1](#smos-cursor-gen-0.1.1)
@@ -18,7 +14,7 @@ day: 2021-03-13
 - <a name="smos-web-server-0.1.2">[smos-web-server 0.1.2](#smos-web-server-0.1.2)
 - <a name="smos-web-style-0.0.0">[smos-web-style 0.0.0](#smos-web-style-0.0.0)
 
-## Added
+##### Added
 
 - `smos-query`:
   The 'timestamp' projection.
@@ -47,7 +43,7 @@ day: 2021-03-13
 - `smos-web-server`:
   A fancy home page instead of just a login button.
   
-## Changed
+##### Changed
 
 - `smos-data`:
   Allow spaces and parens in property values.
@@ -62,33 +58,6 @@ day: 2021-03-13
   Hide properties of done entries on startup.
 - `smos`:
   The waiting report is now drawn with the configured threshold, instead of always with threshold 7.
-
-
-
-
-# <a name="2021-02-01">[2021-02-01 Release](#2021-02-01)
-
-- <a name="smos-0.1.3">[smos 0.1.3](#smos-0.1.3)
-- <a name="smos-query-0.1.2">[smos-query 0.1.2](#smos-query-0.1.2)
-- <a name="smos-archive-0.2.0">[smos-archive 0.2.0](#smos-archive-0.2.0)
-
-
-## Added
-
-- `smos`: The `browserSelectFirst` and `browserSelectLast` actions, which are activated by `gg` and `G` respectively by default.
-- `smos`: The `convArchiveFile` function, activated by `<space>fa` by default. You can use it to archive a file while looking at the file.
-- Nixos module tests for home-manager configurations. The home manager module is now an official deliverable.
-
-## Changed
-
-- `smos-archive`: The timestamp appended to the filename during archiving now includes the local time of day instead of only the day.
-- `smos`: The contents of an entry are now aligned with its state and header instead of with its list indicator.
-- `smos`: Fixed a grammatical error in the description of the `entrySelectTagsFromBack` action.
-- `smos`: Fixed incorrect logic with respect to displaying an ellipsis when parts of an entry were collapsed and selected.
-- `smos`: Drastically reduced the idle CPU/memory usage by turning off idle GC.
-- `smos`: Changed the lister character `-` to a space for a cleaner UI.
-- `smos-query`: Fixed that check violations would not show up in the work report if the user had not configured any contexts.
-- Converted all test suites to using [Sydtest](https://github.com/NorfairKing/sydtest) and fixed three sources of flakiness as a result.
 
 
 
