--- a/smos-docs-site/content/changelogs/2021-04-09.markdown
+++ b/smos-docs-site/content/changelogs/2021-04-09.markdown
@@ -1,7 +1,3 @@
----
-day: 2021-04-09
----
-
 - <a name="smos-0.1.5">[smos 0.1.5](#smos-0.1.5)
 - <a name="smos-api-0.2.0">[smos-api 0.2.0](#smos-api-0.2.0)
 - <a name="smos-api-gen-0.1.1">[smos-api-gen 0.1.1](#smos-api-gen-0.1.1)
@@ -27,7 +23,7 @@ day: 2021-04-09
 - <a name="smos-web-server-0.2.0">[smos-web-server 0.2.0](#smos-web-server-0.2.0)
 - <a name="smos-web-style-0.0.1">[smos-web-style 0.0.1](#smos-web-style-0.0.1)
 
-## Added
+##### Added
 
 - `smos-github`:
   [For integrating with github](/smos-github)
@@ -38,7 +34,7 @@ day: 2021-04-09
 - `smos-notify`:
   [For integrating with desktop notifications](/smos-notify)
 
-## Changed
+##### Changed
 
 - `smos-data`:
   Updated the data format to include a data format version.
@@ -65,6 +61,6 @@ day: 2021-04-09
 - `smos-sync-client`:
   The sync client now checks compatibility with the server's API version.
 
-## Deleted
+##### Deleted
 
 - `smos-client-gen`: This package was empty
