--- a/smos-docs-site/content/changelogs/2021-04-30.markdown
+++ b/smos-docs-site/content/changelogs/2021-04-30.markdown
@@ -1,10 +1,3 @@
----
-title: Release 2020-04-30
-description: The changelog for the 2020-04-30 release
----
-
-# <a name="2021-04-30">[2021-04-30 Release](#2021-04-30)
-
 - <a name="smos-api-gen-smos-api-gen-0.2.0">[smos-api-gen smos-api-gen-0.2.0](#smos-api-gen-smos-api-gen-0.2.0)
 - <a name="smos-smos-0.2.0">[smos smos-0.2.0](#smos-smos-0.2.0)
 - <a name="smos-github-smos-github-0.1.0">[smos-github smos-github-0.1.0](#smos-github-smos-github-0.1.0)
@@ -20,7 +13,7 @@ description: The changelog for the 2020-04-30 release
 - <a name="smos-server-gen-smos-server-gen-0.2.0">[smos-server-gen smos-server-gen-0.2.0](#smos-server-gen-smos-server-gen-0.2.0)
 
 
-## Added
+##### Added
 
 - `smos`: A keybinding to open the `url` property in smos: `<space>ou` by default.
 - `smos-server`: Now performs auto-backups and backup garbage-collection beyond a maximum number of backups or backup size
@@ -28,7 +21,7 @@ description: The changelog for the 2020-04-30 release
 - `smos-server`: Admin endpoint for the admin panel
 - `smos-web-server`: Admin panel with basic user information
 
-## Changed
+##### Changed
 
 - `smos-github`: There is now a new column that suggests you to have another look at the issue/pr because there has been a recent enough update.
 - `smos-github`: Done entries are no longer mentioned in the `list` report.
