Fixed that the filter bar wasn't shown in the interactive work report., fixes #206

--- a/smos-docs-site/content/changelogs/2021-05-04.markdown
+++ b/smos-docs-site/content/changelogs/2021-05-04.markdown
@@ -16,7 +16,7 @@
 ##### Changed
 
 - `smos` and `smos-query`: More strings are now recognised as durations: `5sec`, `6 min`, `7 hours`, etc... 
-  This fixes [Issue 104](https://github.com/NorfairKing/smos/issues/104)
+  This fixes [Issue 104](https://github.com/NorfairKing/smos/issues/104).
   See [PR 195](https://github.com/NorfairKing/smos/pull/195) for more details.
   Thank you [@ketzacoatl](https://github.com/ketzacoatl)!
 - `smos-sync-client`: Now sends the `User-Agent` header with `smos-sync-client-<version>`.
