--- a/smos-docs-site/content/changelogs/2020-11-04.markdown
+++ b/smos-docs-site/content/changelogs/2020-11-04.markdown
@@ -1,5 +1,5 @@
-- <a name="smos-0.1.1">[smos 0.1.1](#smos0-1.1)
-- <a name="smos-query-0.1.1">[smos-query 0.1.1](#smos-query0-1.1)
+- <a name="smos-0.1.1">[smos 0.1.1](#smos-0.1.1)
+- <a name="smos-query-0.1.1">[smos-query 0.1.1](#smos-query-0.1.1)
 
 ##### Added
 
