--- a/smos-docs-site/content/changelogs/2020-12-16.markdown
+++ b/smos-docs-site/content/changelogs/2020-12-16.markdown
@@ -1,10 +1,10 @@
-- <a name="smos-0.1.2">[smos 0.1.2](#smos0-1.2)
-- <a name="smos-calendar-import-0.2.0">[smos-calendar-import 0.2.0](#smos-calendar-import0-2.0)
-- <a name="smos-cursor-0.2.0">[smos-cursor 0.2.0](#smos-cursor0-2.0)
-- <a name="smos-report-0.2.0">[smos-report 0.2.0](#smos-report0-2.0)
-- <a name="smos-query-0.2.0">[smos-query 0.2.0](#smos-query0-2.0)
-- <a name="smos-shell-0.0.0">[smos-shell 0.0.0](#smos-shell0-0.0)
-- <a name="smos-web-server-0.1.1">[smos-web-server 0.1.1](#smos-web-server0-1.1)
+- <a name="smos-0.1.2">[smos 0.1.2](#smos-0.1.2)
+- <a name="smos-calendar-import-0.2.0">[smos-calendar-import 0.2.0](#smos-calendar-import-0.2.0)
+- <a name="smos-cursor-0.2.0">[smos-cursor 0.2.0](#smos-cursor-0.2.0)
+- <a name="smos-report-0.2.0">[smos-report 0.2.0](#smos-report-0.2.0)
+- <a name="smos-query-0.2.0">[smos-query 0.2.0](#smos-query-0.2.0)
+- <a name="smos-shell-0.0.0">[smos-shell 0.0.0](#smos-shell-0.0.0)
+- <a name="smos-web-server-0.1.1">[smos-web-server 0.1.1](#smos-web-server-0.1.1)
 
 ##### Added
 
