--- a/smos-docs-site/content/changelogs/2021-06-26.markdown
+++ b/smos-docs-site/content/changelogs/2021-06-26.markdown
@@ -1,3 +1,13 @@
+- <a name="smos-0.3.0">[smos 0.3.0](#smos-0.3.0)
+- <a name="smos-api-0.3.1">[smos-api 0.3.1](#smos-api-0.3.1)
+- <a name="smos-cursor-0.3.0">[smos-cursor 0.3.0](#smos-cursor-0.3.0)
+- <a name="smos-query-0.6.0">[smos-query 0.6.0](#smos-query-0.6.0)
+- <a name="smos-report-0.5.0">[smos-report 0.5.0](#smos-report-0.5.0)
+- <a name="smos-scheduler-0.2.0">[smos-scheduler 0.2.0](#smos-scheduler-0.2.0)
+- <a name="smos-server-0.4.0">[smos-server 0.4.0](#smos-server-0.4.0)
+- <a name="smos-sync-client-gen-0.2.0">[smos-sync-client-gen 0.2.0](#smos-sync-client-gen-0.2.0)
+- <a name="smos-web-server-0.6.0">[smos-web-server 0.6.0](#smos-web-server-0.6.0)
+
 ### Added
 
 - `smos-query`:
