fixed a changelog's formatting

--- a/smos-docs-site/content/changelogs/2023-11-25.markdown
+++ b/smos-docs-site/content/changelogs/2023-11-25.markdown
@@ -6,10 +6,10 @@
 
 ### Changed
 
-`smos` and `smos-query`: Consider the `END` timestamp exclusive for the purpose of the ongoing report.
-`smos-data`: Documented the meaning of common timestamp names.
-`smos-calendar-import`: Improved the ICAL parsing so that invalidly `TEXT`-encoded `URL` properties can still be parsed. 
-`smos`: Replace `[+]` by `[unsaved changes]`.
-`smos`: Added style (colour) to the editor header text.
-`smos-calendar-import`: Retry http requests.
-`smos-web-server`: Fixed that the web ui did not resize upon the first load.
+* `smos` and `smos-query`: Consider the `END` timestamp exclusive for the purpose of the ongoing report.
+* `smos-data`: Documented the meaning of common timestamp names.
+* `smos-calendar-import`: Improved the ICAL parsing so that invalidly `TEXT`-encoded `URL` properties can still be parsed. 
+* `smos`: Replace `[+]` by `[unsaved changes]`.
+* `smos`: Added style (colour) to the editor header text.
+* `smos-calendar-import`: Retry http requests.
+* `smos-web-server`: Fixed that the web ui did not resize upon the first load.
